--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
